[tool.poetry]
name = "ziff"
version = "0.1.0"
description = ""
authors = ["khabar0val <alexander.khabarov.123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
Flask-RESTful = "^0.3.9"
mysql-connector-python = "^8.0.31"
mysql-connector = "^2.2.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
